create baseline for rest assured template